# bread

./: .gitignore  CLAUDE_SPEC.md  Cargo.toml  DAEMON.md  Documentation.md  Examples.md  LICENSE  LUA_RUNTIME.md  Overview.md  README.md  bakery.toml
.forgejo/workflows/: mirror.yml  package.yml
.github/workflows/: ci.yml  release.yml
bread-cli/: Cargo.toml
bread-cli/src/: lib.rs  main.rs  modules_mgmt.rs
bread-cli/tests/: modules.rs
bread-shared/: Cargo.toml
bread-shared/src/: lib.rs
bread-sync/: Cargo.toml  EXTRACTION.md  README.md
bread-sync/src/: config.rs  delegates.rs  export.rs  git.rs  lib.rs  machine.rs  packages.rs
bread-sync/tests/: sync.rs
breadd/: Cargo.toml
breadd/src/: main.rs
breadd/src/adapters/: bluetooth.rs  hyprland.rs  mod.rs  network.rs  network_rtnetlink.rs  power.rs  power_upower.rs  udev.rs
breadd/src/core/: config.rs  mod.rs  normalizer.rs  state_engine.rs  subscriptions.rs  supervisor.rs  types.rs
breadd/src/ipc/: mod.rs
breadd/src/lua/: mod.rs
breadd/tests/: ipc_integration.rs
examples/modules/: README.md  dock-monitors.lua  low-battery-warning.lua  pause-media-on-headphone-unplug.lua
packaging/: README.md
packaging/arch/: PKGBUILD  README.md
packaging/systemd/: breadd.service
scripts/: install.sh
