[workspace]
members = [
    "bread-shared",
    "breadd",
    "bread-cli",
]
# bread-sync is being extracted into its own project (see bread-sync/EXTRACTION.md).
# Excluded so it no longer builds, tests, or gates CI as part of bread.
exclude = [
    "bread-sync",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
git2 = "0.18"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
glob = "0.3"
