[package]
name = "bread-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bread"
path = "src/main.rs"

[lib]
name = "bread_cli"
path = "src/lib.rs"

[dependencies]
bread-shared = { path = "../bread-shared" }
bread-sync = { path = "../bread-sync" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
libc = "0.2"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
tempfile.workspace = true
