[package]
name = "bread-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "bread"
path = "src/main.rs"

[lib]
name = "bread_cli"
path = "src/lib.rs"

[dependencies]
bread-shared = { path = "../bread-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
clap = { version = "4.5", features = ["derive"] }
notify = "6.1"
libc = "0.2"
toml = "0.8"

[dev-dependencies]
tempfile.workspace = true
