[package]
name = "bread-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
git2 = { version = "0.18", features = ["vendored-libgit2"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempfile = "3.13"
