[package]
name = "bread-sync"
version = "1.0.0"
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
git2.workspace = true
dirs.workspace = true
chrono.workspace = true
glob.workspace = true
toml = "0.8"
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
