[package]
name = "breadd"
version = "0.1.0"
edition = "2021"

[dependencies]
bread-shared = { path = "../bread-shared" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
mlua = { version = "0.9", features = ["lua54", "vendored", "async", "serialize"] }
async-trait = "0.1"
toml = "0.8"
udev = { version = "0.9", features = ["send"] }
rtnetlink = "0.9"
zbus = { version = "3.13", features = ["tokio"] }
hex = "0.4"
futures-util = "0.3"
netlink-packet-route = "0.11"
netlink-packet-core = "0.4"
libc = "0.2"

[dev-dependencies]
tempfile = "3.13"
